анимация спавна клетки

--- a/src/pages/game/ui/GameTooltip/GameTooltip.module.css
+++ b/src/pages/game/ui/GameTooltip/GameTooltip.module.css
@@ -3,6 +3,7 @@
     display: flex;
     color: var(--white);
     justify-content: space-between;
+    font-family: sans-serif;
 }
 
 .controls_block > * {
