--- a/src/pages/game/ui/Cell/Cell.module.css
+++ b/src/pages/game/ui/Cell/Cell.module.css
@@ -12,3 +12,16 @@
     flex-direction: column;
     color: var(--black);
 }
+
+.spawned {
+    animation: spawning 100ms forwards ease;
+}
+
+@keyframes spawning {
+    from {
+        transform: scale(0.5);
+    }
+    to {
+        transform: scale(1);
+    }
+}
