--- a/src/entities/game/ui/scoreboard/Scoreboard.module.css
+++ b/src/entities/game/ui/scoreboard/Scoreboard.module.css
@@ -1,7 +1,7 @@
 .scoreboard {
-    color: #feffff;
+    color: var(--white);
     font-family: sans-serif;
     font-size: 20px;
     font-weight: 600;
-    padding: 20px 0;
+    padding: 0 0 20px 0;
 }
