[add] поддержка мобильных устройств

--- a/src/entities/game/ui/game-container/GameContainer.module.css
+++ b/src/entities/game/ui/game-container/GameContainer.module.css
@@ -16,3 +16,10 @@
     font-family: sans-serif;
     transition: 300ms all ease-in;
 }
+
+@media screen and (max-width: 400px) {
+    .container {
+        padding: 0;
+        border: none;
+    }
+}
