--- a/src/entities/game/ui/scoreboard/Scoreboard.module.css
+++ b/src/entities/game/ui/scoreboard/Scoreboard.module.css
@@ -4,4 +4,22 @@
     font-size: 20px;
     font-weight: 600;
     padding: 0 0 20px 0;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.fullscreen_button {
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    padding: 0;
+    border: none;
+}
+
+.fullscreen_button > img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
 }
