--- a/src/entities/game/ui/playground/Playground.module.css
+++ b/src/entities/game/ui/playground/Playground.module.css
@@ -9,8 +9,8 @@
 	width: 70px;
 	aspect-ratio: 1;
 	border-radius: 5px;
-	transition: 100ms ease-in-out;
-	transition-property: transform;
+	transition: transform var(--transition-duration) ease-in-out;
+	/* transition-property: transform; */
 }
 
 .container {
