--- a/src/entities/game/ui/scoreboard/Scoreboard.module.css
+++ b/src/entities/game/ui/scoreboard/Scoreboard.module.css
@@ -9,17 +9,13 @@
     justify-content: space-between;
 }
 
-.fullscreen_button {
-    width: 40px;
-    height: 40px;
+.new_game_button {
     background-color: transparent;
     padding: 0;
-    border: none;
-}
-
-.fullscreen_button > img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    object-position: center;
+    border: 1px solid var(--white);
+    color: var(--white);
+    padding: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 700;
 }
