--- a/src/entities/game/ui/playground/Playground.module.css
+++ b/src/entities/game/ui/playground/Playground.module.css
@@ -19,6 +19,22 @@
 	height: 310px;
 }
 
+.game_over {
+    inset: 0;
+    position: absolute;
+    background-color: rgba(254, 255, 255, 0.47);
+    color: var(--black);
+    display: grid;
+    place-items: center;
+    font-size: 24px;
+    font-weight: 700;
+    font-family: sans-serif;
+    animation: fade_in 500ms ease forwards;
+    backdrop-filter: blur(2px);
+    cursor: pointer;
+	border-radius: 5px;
+}
+
 .absolute {
 	position: absolute;
 	left: 0;
@@ -26,4 +42,13 @@
 	width: 100%;
 	height: 100%;
 	z-index: -1;
+}
+
+@keyframes fade_in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
