--- a/src/entities/game/ui/scoreboard/Scoreboard.module.css
+++ b/src/entities/game/ui/scoreboard/Scoreboard.module.css
@@ -1,21 +1,40 @@
 .scoreboard {
-    color: var(--white);
-    font-family: sans-serif;
-    font-size: 20px;
-    font-weight: 600;
-    padding: 0 0 20px 0;
+	color: var(--color-4);
+	font-family: sans-serif;
+	font-size: 20px;
+	font-weight: 600;
+	padding: 0 0 20px 0;
 
-    display: flex;
-    justify-content: space-between;
+}
+
+.scoreboard_panel {
+	display: flex;
+	justify-content: space-between;
+}
+
+.scoreboard_panel_item {
+	text-align: center;
+    min-width: 120px;
+    background-color: var(--color-4);
+    color: var(--black);
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.scoreboard_panel_item_title {
+    font-size: 14px;
 }
 
 .new_game_button {
-    background-color: transparent;
-    padding: 0;
-    border: 1px solid var(--white);
-    color: var(--white);
-    padding: 10px;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: 700;
+	background-color: transparent;
+	padding: 5px;
+    border-radius: 5px;
+    border: none;
+	color: var(--black);
+    background-color: var(--color-4);
+	padding: 10px;
+	cursor: pointer;
+	font-size: 16px;
+	font-weight: 700;
+    margin-top: 40px;
 }
