--- a/src/entities/game/ui/game-container/GameContainer.module.css
+++ b/src/entities/game/ui/game-container/GameContainer.module.css
@@ -5,9 +5,93 @@
     border-radius: 5px;
 }
 
+.modal {
+    position: absolute;
+    inset: -1px;
+    background-color: var(--black);
+    border-radius: 5px;
+    animation: fadeIn 150ms ease forwards;
+    padding: 30px;
+}
+
+.modal_out {
+    animation: fadeOut 150ms ease forwards;
+}
+
+.modal__panel {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.modal__panel__close_button {
+    width: 40px;
+    height: 40px;
+    background-color: var(--white);
+    border-radius: 5px;
+    padding: 0;
+    border: none;
+    cursor: pointer;
+    display: grid;
+    place-items: center;
+}
+
+.modal__header {
+    color: var(--white);
+}
+
+.modal__speed_button {
+    border: 1px solid var(--white);
+    border-radius: 5px;
+    width: 100px;
+    height: 60px;
+    background-color: var(--black);
+    color: var(--white);
+    font-weight: 700;
+    font-size: 18px;
+    cursor: pointer;
+    transition: all 300ms ease;
+}
+
+.modal__speed_button:hover {
+    opacity: 0.7;
+}
+
+.modal__speed_button[data-selected="true"] {
+    background-color: var(--white);
+    color: var(--black);
+}
+
+.modal__speed_block {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
 @media screen and (max-width: 400px) {
     .container {
         padding: 0;
         border: none;
+    }
+
+    .modal {
+        padding: 0;
     }
 }
