--- a/src/entities/game/ui/game-container/GameContainer.module.css
+++ b/src/entities/game/ui/game-container/GameContainer.module.css
@@ -41,8 +41,7 @@
 }
 
 .modal__speed_button {
-    border: 1px solid var(--white);
-    border-radius: 5px;
+    border: none;
     width: 100px;
     height: 60px;
     background-color: var(--black);
@@ -52,6 +51,7 @@
     cursor: pointer;
     transition: all 300ms ease;
     font-family: var(--main-font);
+    flex: 1;
 }
 
 .modal__speed_button:hover {
@@ -67,6 +67,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border: 1px solid var(--white);
+    border-radius: 5px;
+    overflow: hidden;
 }
 
 @keyframes fadeIn {
