--- a/src/entities/game/ui/playground/Playground.module.css
+++ b/src/entities/game/ui/playground/Playground.module.css
@@ -3,10 +3,12 @@
 	grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: repeat(4, 1fr);
 	grid-gap: 10px;
+    width: 100%;
+    aspect-ratio: 1;
+    container-type: inline-size;
 }
 
 .playground > * {
-	width: 70px;
 	aspect-ratio: 1;
 	border-radius: 5px;
 	transition: transform var(--transition-duration) ease-in-out;
@@ -14,8 +16,6 @@
 
 .container {
 	position: relative;
-	width: 310px;
-	height: 310px;
 }
 
 .game_over {
@@ -30,8 +30,30 @@
     font-family: var(--main-font);
     animation: fade_in 500ms ease forwards;
     backdrop-filter: blur(2px);
-    cursor: pointer;
 	border-radius: 5px;
+}
+
+.game_over__inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.game_over__button {
+    font-family: var(--main-font);
+    font-size: 20px;
+    font-weight: 700;
+    padding: 15px;
+    border-radius: 5px;
+    color: var(--color-4);
+    background-color: var(--black);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    border: none;
 }
 
 .absolute {
@@ -40,7 +62,7 @@
 	top: 0;
 	width: 100%;
 	height: 100%;
-	z-index: -1;
+	z-index: auto;
 }
 
 @keyframes fade_in {
