--- a/src/shared/ui/cells-background/CellsBackground.module.css
+++ b/src/shared/ui/cells-background/CellsBackground.module.css
@@ -1,13 +1,14 @@
 .container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-gap: 10px;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: repeat(4, 1fr);
+	grid-gap: 10px;
+	width: 100%;
+	aspect-ratio: 1;
 }
 
 .cell {
-    width: 70px;
-    aspect-ratio: 1;
-    border-radius: 5px;
-    background-color: #5d5d5d;
+	aspect-ratio: 1;
+	border-radius: 5px;
+	background-color: #5d5d5d;
 }
